# stay-out

./: README.md  hooks.hpp  main.cpp  memory.cpp  memory.hpp
ZCodeProject/: CMakeLists.txt  TESTING.md  bigworld.cpp  build.bat  config.hpp  diag.bat  diagnostics.cpp  esp.cpp  esp.hpp  inventory.cpp  kernel-level  main.cpp  overlay.cpp  overlay.hpp  python_bridge.cpp  render.cpp  render.hpp  still
ZCodeProject/ZCodeProject/: CMakeLists.txt  System)  TESTING.md  _analysis2.txt  _analysis3.txt  _analyze3.bat  anti-cheat  bigworld.hpp  build.bat  diagnostics.hpp  injection  inventory.hpp  math.hpp  probe.c  python_bridge.hpp  run.bat
ZCodeProject/ZCodeProject/build.backup-20260703-200013/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake
ZCodeProject/ZCodeProject/build.backup-20260703-200013/injector/: cmake_install.cmake
ZCodeProject/ZCodeProject/injector/: README.md  main.cpp  manual_map.cpp  manual_map.hpp  pe.hpp
ZCodeProject/ZCodeProject/injector2/: README.md  kernelmode.vcxproj  loader.cpp  loader_stub.asm  modern_injector.cpp  modern_injector.vcxproj
ZCodeProject/ZCodeProject/injector2/kernelmode/x64/Release/: loader.exe.recipe  loader.iobj  loader.ipdb
ZCodeProject/ZCodeProject/injector2/kernelmode/x64/Release/kernelmode.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ZCodeProject/ZCodeProject/injector2/kernelmodeinjector-main/: kernelmode.sln  kernelmode.vcxproj.filters  loader.cpp  modern_injector.cpp  modern_injector.vcxproj
ZCodeProject/ZCodeProject/injector2/modern_injector/x64/Release/: modern_injector.dll.recipe
ZCodeProject/ZCodeProject/injector2/modern_injector/x64/Release/modern_injector.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Masm.read.1u.tlog  Masm.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  modern_injector.lastbuildstate
ZCodeProject/ZCodeProject/injector2/x64/Release/: modern_injector.sys
ZCodeProject/injector/: CMakeLists.txt
ZCodeProject/injector2/: kernelmode.vcxproj
